Alignment fix

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    padding: 16px;
+    padding: 4px;
 }
 
 #search {
@@ -36,7 +36,6 @@ body {
     display: flex;
     flex-direction: column;
     overflow-y: auto;
-    border: 1px solid #ccc;
+    border: 0;
     border-radius: 8px;
-    padding: 16px;
 }
